dsp-cli/tests/snapshots/auth_snapshots__auth_login_json_auth_required.snap
---
source: tests/auth_snapshots.rs
assertion_line: 609
expression: out.clone()
---
{"_meta":{"server":"https://api.example.com","auth":"anonymous","exit_code":3},"error":{"kind":"auth_required","message":"authentication required: Authentication failed on https://api.example.com"}}
