dsp-cli/tests/snapshots/auth_snapshots__auth_login_json_network.snap
---
source: tests/auth_snapshots.rs
assertion_line: 624
expression: buf_to_string(&buf)
---
{"_meta":{"server":"https://api.example.com","auth":"anonymous","exit_code":1},"error":{"kind":"network","message":"network error: connection refused"}}
