dsp-cli/tests/snapshots/auth_snapshots__auth_login_json_server_error.snap
---
source: tests/auth_snapshots.rs
assertion_line: 634
expression: buf_to_string(&buf)
---
{"_meta":{"server":"https://api.example.com","auth":"anonymous","exit_code":1},"error":{"kind":"server_error","message":"server error: server returned 500"}}
