dsp-cli/tests/snapshots/auth_snapshots__auth_logout_csv_not_cached.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
server,was_cached
https://api.example.com,false
