dsp-cli/tests/snapshots/auth_snapshots__auth_logout_json_not_cached.snap
---
source: tests/auth_snapshots.rs
assertion_line: 566
expression: buf_to_string(&buf)
---
{"_meta":{"server":"https://api.example.com","auth":"anonymous","exit_code":0},"data":{"was_cached":false,"state":"logout_no_op"}}
