dsp-cli/tests/snapshots/auth_snapshots__auth_logout_json_was_cached.snap
---
source: tests/auth_snapshots.rs
assertion_line: 519
expression: buf_to_string(&buf)
---
{"_meta":{"server":"https://api.example.com","auth":"anonymous","exit_code":0},"data":{"was_cached":true,"state":"logout_was_cached"}}
