dsp-cli/tests/snapshots/auth_snapshots__auth_logout_lines_not_cached.snap
---
source: tests/auth_snapshots.rs
expression: buf_to_string(&buf)
---
https://api.example.com	was_cached=false
